# Java-Codes-Problems-Dusan

./: .gitignore  README.md  settings.gradle
Algorithms-Java-Dusan/: build.gradle  settings.gradle
Algorithms-Java-Dusan/Problems/: build.gradle
Algorithms-Java-Dusan/Problems/src/main/java/site/duqian/problems/: TreeNode.java
Algorithms-Java-Dusan/algorithm_app/: build.gradle
Algorithms-Java-Dusan/algorithm_app/src/androidTest/java/site/duqian/android/: ExampleInstrumentedTest.java
Algorithms-Java-Dusan/algorithm_app/src/main/: AndroidManifest.xml
Algorithms-Java-Dusan/algorithm_app/src/main/java/site/duqian/algorithm/: MainActivity.kt
Algorithms-Java-Dusan/algorithm_app/src/main/res/layout/: activity_main.xml
Algorithms-Java-Dusan/algorithm_app/src/main/res/values/: strings.xml
Algorithms-Java-Dusan/algorithm_app/src/test/java/site/duqian/android/: ExampleUnitTest.java
Algorithms-Java-Dusan/android/: build.gradle
Algorithms-Java-Dusan/android/src/androidTest/java/site/duqian/android/: ExampleInstrumentedTest.java
Algorithms-Java-Dusan/android/src/main/: AndroidManifest.xml
Algorithms-Java-Dusan/android/src/main/java/site/duqian/android/: MainActivity.java
Algorithms-Java-Dusan/android/src/main/res/layout/: activity_main.xml
Algorithms-Java-Dusan/gradle/wrapper/: gradle-wrapper.properties
Algorithms-Java-Dusan/wechat_jump/src/main/java/site/duqian/wechat_jump/: PhoneImagePanel.java  Point.java  Utils.java  WXJumpGame.java
Problems/: .gitignore
Problems/src/main/java/site/duqian/problems/: ListNode.java
Problems/src/test/java/site/duqian/problems/easy/: EasyProblemsTests.java  IsPalindromeTest.java  ListNodeRemoveNumsTest.java  Roman2IntegerTest.java
Problems/src/test/java/site/duqian/problems/leetcode/: LeetCodeTests.java
Problems/src/test/java/site/duqian/problems/lintcode/: LintCodeTests.java
cpp_algorithm/: settings.gradle
cpp_algorithm/app/: build.gradle
cpp_algorithm/app/src/androidTest/java/site/duqian/cpp_algorithm/: ExampleInstrumentedTest.kt
cpp_algorithm/app/src/main/: AndroidManifest.xml
cpp_algorithm/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
cpp_algorithm/app/src/main/cpp/easy/: Easy.cpp  Easy.h  EasyTest.cpp  EasyTest.h  easy.cpp  easy.h
cpp_algorithm/app/src/main/cpp/include/: common.h
cpp_algorithm/app/src/main/cpp/medium/: Medium.cpp  Medium.h  MediumTest.cpp  MediumTest.h
cpp_algorithm/app/src/main/cpp/util/: logger.h
cpp_algorithm/app/src/main/java/site/duqian/cpp_algorithm/: MainActivity.kt
cpp_algorithm/app/src/main/res/values/: strings.xml  themes.xml
cpp_algorithm/app/src/main/res/values-night/: themes.xml
cpp_algorithm/gradle/wrapper/: gradle-wrapper.properties
(+80 files in other folders)
